--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "ethers": "^6.13.4",
+    "pinata-web3": "^0.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
